# breezy-react

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  README.md  bun.lockb  fly.toml  index.html  nginx.conf  package.json
src/: App.tsx
src-backend/: .dockerignore  .envrc.example  Cargo.toml  Dockerfile  fly.toml
src-backend/src/: main.rs
src/components/: WeatherButton.tsx  WeatherDisplay.tsx
src/utils/: weatherUtils.ts
